[package]
name = "fixsliced_gift"
authors = ["Nicklas Vedsted"]
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "masked_benchmark"
harness = false
